Agrega formularios para registro de medicamento y unidad de medida; mejora la visualización de turnos en la secretaria

--- a/Frontend/vite-project/src/components/Secretaria/turnosSecretaria.css
+++ b/Frontend/vite-project/src/components/Secretaria/turnosSecretaria.css
@@ -16,6 +16,10 @@
     
 }
 
+.contenedor{
+    max-width: 90%;
+    margin: 0 auto;
+}
 
 .uniform-button {
     min-width: 100px; /* Define un ancho mínimo */
@@ -51,7 +55,7 @@ table th {
   }
 
 
-@media (max-width: 767px) {
+@media (max-width: 915px) {
 .table thead {
     display: none; /* Oculta los encabezados en dispositivos móviles */
 }
