--- a/Frontend/vite-project/src/index.css
+++ b/Frontend/vite-project/src/index.css
@@ -62,7 +62,7 @@
   text-align: center;
 }
 .btn.obtenerTurno{
-  width: 14.30rem;
+  width: 80%;
   height: 2.83rem;
   border-radius: 30px;
   font-size: 14px;
@@ -83,12 +83,19 @@
 
 /* Tarjeta */
 .card.turno{
+  height: 100%;
+  width: 100%;
   border: none;
   box-shadow: 0 0 10px 0 rgba(97, 99, 100, 0.5);
   border-radius: 10px ;
 }
 .card-body.turno{
   padding: 30px 30px 30px 30px;
+}
+
+.card .card-img-top{
+  width: 100%;
+  height: 100%;
 }
 
 .tarjeta{
@@ -182,22 +189,11 @@ th, td {
   background-color: #009ee222;
 }
 
-.responsive-table-dark {
-  background-color: #666;
-  color: white;
-}
-
-.responsive-table-dark thead {
-  background-color: #333;
-  color: white;
-}
-
-.responsive-table-dark th {
-  background-color: #333;
-}
-
-.responsive-table-dark tbody tr:nth-child(even) {
-  background-color: #555;
+.veterinarios-info >h5{
+  font-size: 1.5rem;
+  font-weight: bold;
+  color:#009EE2;
+  text-decoration: underline;
 }
 
 @media (max-width: 767px) {
@@ -677,6 +673,10 @@ div.containerPaso1 {
   div.container {
     flex-direction: column;
     align-items: center;
+  }
+
+  .col-md-4{
+    margin-bottom: 2rem;
   }
 
   .card-option.maven-pro-body {
