--- a/Frontend/vite-project/src/components/footer.css
+++ b/Frontend/vite-project/src/components/footer.css
@@ -25,7 +25,7 @@ html, body {
   }
   
   .footer-image {
-    max-width: 65%;
+    max-width: 75%;
     height: auto;
   }
   
@@ -34,3 +34,9 @@ html, body {
       max-width: 90%;
     }
   }
+
+  .page-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 41vh;
+}
