--- a/Frontend/vite-project/src/components/Perfil/Perfil.css
+++ b/Frontend/vite-project/src/components/Perfil/Perfil.css
@@ -25,9 +25,10 @@
   .seccion h5 {
     font-size: 18px;
     color: #777;
+    min-width: 120px;
     margin-bottom: 10px;
   }
-  
+
   .campo {
     margin-bottom: 15px;
   }
@@ -46,8 +47,23 @@
 
   .campo-nombre-apellido {
     display: grid;
-    grid-template-columns: 1fr 1fr; 
-    gap: 20px; 
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+  }
+
+  @media (max-width: 768px) {
+    .campo-nombre-apellido {
+      grid-template-columns: 1fr;
+    }
+
+    .campo-grid {
+      grid-template-columns: 1fr;
+    }
+
+    .botonOjo{
+      margin-left: 88% !important;
+    }
+
   }
   
   label {
@@ -112,3 +128,6 @@
     color: #0056b3;
     font-weight: bold;
   }  
+
+
+  
