--- a/Frontend/vite-project/src/components/correo_confirmacion.html
+++ b/Frontend/vite-project/src/components/correo_confirmacion.html
@@ -59,12 +59,12 @@
     
     
     <tr>
-        <td style="text-align: center; margin-bottom: 7px;">
-            <a target="_blank" rel="noopener noreferrer" href="https://turnero-castraciones-production.up.railway.app/" style="background-color: #2c7dda; color: white; padding: 10px 20px; border: none; border-radius: 5px; font-size: 16px; text-decoration: none; display: inline-block;">
-                Confirmar
-            </a>
-        </td>
-    </tr>
+      <td style="text-align: center; margin-bottom: 7px;">
+          <a target="_blank" rel="noopener noreferrer" href="https://turnero-castraciones-production.up.railway.app/confirmacion?c=yZ3plDNtAGcW13wICk9USp5Z3xBwGbAjBer8F-0Mv74" style="background-color: #2c7dda; color: white; padding: 10px 20px; border: none; border-radius: 5px; font-size: 16px; text-decoration: none; display: inline-block;">
+              Confirmar
+          </a>
+      </td>
+  </tr>
 
     <tr>
       <td style="padding: 20px;">
