--- a/Frontend/vite-project/src/index.css
+++ b/Frontend/vite-project/src/index.css
@@ -114,7 +114,7 @@
 table {
   width: 100%;
   border-collapse: collapse;
-  margin: 20px 0;
+  /* margin: 20px 0; */
   font-size: 16px;
   font-family: 'Arial', sans-serif;
 }
