habilitar turnero dinamico

--- a/Frontend/vite-project/src/components/Secretaria/turnosSecretaria.css
+++ b/Frontend/vite-project/src/components/Secretaria/turnosSecretaria.css
@@ -94,3 +94,14 @@ table th {
 
 }
 }
+
+.botonEliminarAgenda{
+  margin-left: -30px;
+}
+
+@media (max-width: 768px) {
+  .botonEliminarAgenda {
+    margin-left: 0px;
+  }
+}
+  
