--- a/Frontend/vite-project/src/index.css
+++ b/Frontend/vite-project/src/index.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 .custom-menu-bg {
-  background-color: #009EE2; /* Cambia a tu color preferido */
+  background-color: #009EE2; 
   color: white;
 }
 .navbar-nav .nav-link {
-  color: white !important; /* Asegura que el color de los enlaces sea blanco */
+  color: white !important; 
 }
 .navbar-brand{
   padding: 20px;
@@ -13,7 +13,7 @@
 .maven-pro-title {
   font-family: "Maven Pro", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 700; /* Puedes ajustar el peso según sea necesario */
+  font-weight: 700;
   font-style: normal;
   color: #009EE2;
 }
